# language-templates

./: README.md
languages/ada/: config.yml
languages/ada/code/: .gitignore  alire.toml  codecrafters_{{course_slug_underscorized}}.gpr
languages/ada/dockerfiles/: ada-2.1.1.Dockerfile
languages/c/code/: CMakeLists.txt
languages/c/dockerfiles/: c-14.2.Dockerfile  c-23.Dockerfile
languages/clojure/: config.yml
languages/clojure/code/: build.clj  deps.edn  readme.md
languages/clojure/dockerfiles/: clojure-0.0.1.Dockerfile  clojure-<version>.Dockerfile
languages/cpp/code/: CMakeLists.txt
languages/cpp/dockerfiles/: cpp-23.Dockerfile
languages/csharp/code/: CodeCrafters.{{course_slug_pascalized}}.csproj  CodeCrafters.{{course_slug_pascalized}}.sln  codecrafters-{{course_slug_underscorized}}.csproj  codecrafters-{{course_slug_underscorized}}.sln  codecrafters-{{course_slug}}.csproj  codecrafters-{{course_slug}}.sln  codecrafters.sln
languages/csharp/dockerfiles/: dotnet-10.0.Dockerfile  dotnet-8.0.Dockerfile  dotnet-9.0.Dockerfile
languages/d/: config.yml
languages/d/code/: .gitignore  dub.sdl
languages/d/dockerfiles/: d-2.111.Dockerfile
languages/dart/code/: .gitignore  pubspec.yaml
languages/elixir/code/: .gitignore  (+1 more)
languages/gleam/: config.yml
languages/java/: config.yml
languages/ocaml/code/: codecrafters_{{course_slug_underscorized}}.opam  dune-project
languages/ocaml/code/.codecrafters/: compile.sh  run.sh
languages/ocaml/code/src/: main.ml
languages/rust/: config.yml
languages/scala/: config.yml
scripts/: add_new_language.sh
(+111 files in other folders)
